--- a/Web/config/system.properties
+++ b/Web/config/system.properties
@@ -12,6 +12,6 @@ UPLOAD_PATH=/upload/
 EXPORT_PATH=/export/
 #默认密码
 DEFAULT_PASSWORD=123456
-#默认密码
+#本服务器根URL
 URL_ROOT=http://192.168.9.1:8080/pkqfirewall/
 
